# Collaborative-Object-Transportation

./: README.md  turtlebot3_manipulation_setup.txt
dijkstra/: CMakeLists.txt  package.xml
dijkstra/include/dijkstra/: dijkstra_node.hpp
dijkstra/src/: dijkstra_node.cpp
inv_kin_solver/: CMakeLists.txt  package.xml
inv_kin_solver/include/inv_kin_solver/: inv_kin_node.hpp  optimizer_SQP.hpp  test_inv_kin.hpp
inv_kin_solver/src/: inv_kin_node.cpp  inv_kin_ros_standalone.cpp  optimizer_SQP.cpp  optimizer_SQP_standalone.cpp  standalone_SQP.cpp  test_inv_kin.cpp
inv_kinematics/: package.xml  setup.cfg  setup.py
minion_bringup/: CMakeLists.txt  package.xml
minion_bringup/launch/: sim_minion.launch.py  sim_minion_action.launch.py
minion_bringup/rviz/: default.rviz
mm_description/: CMakeLists.txt  package.xml
mm_description/config/: mm_controller.yaml
mm_description/launch/: gazebo_mm.launch.py
mm_description/rviz/: urdf_config.rviz
mm_description/urdf/: mm.urdf.xacro  mm_gazebo.xacro
mm_interfaces/: CMakeLists.txt  package.xml
mm_interfaces/action/: Trajectory2D.action
mm_interfaces/msg/: TerminalPoints.msg  Trajectory2D.msg  TrajectoryDiff.msg  UndirectedGraph.msg  Waypoint.msg
navigator/: CMakeLists.txt  package.xml
navigator/include/navigator/: navigator.hpp  navigator_action_server.hpp  stop_sync_algo.hpp
navigator/src/: navigator.cpp  navigator_action_server.cpp  stop_sync_algo.cpp
omni_bringup/: CMakeLists.txt  package.xml
omni_bringup/launch/: omni.launch.py
omni_control/: CMakeLists.txt  package.xml
omni_control/include/omni_control/: go_to_goal.hpp  reach_goal.hpp
omni_control/src/: go_to_goal.cpp  go_to_goal_node.cpp  reach_goal.cpp  reach_goal_node.cpp  reach_goal_updated.cpp
omni_description/: CMakeLists.txt  package.xml
omni_description/config/: omnidirectional_controller.yaml
omni_description/launch/: gazebo.launch.xml  rviz.launch.xml
omni_description/rviz/: urdf_config.rviz
omni_description/urdf/: common_properties.xacro  omni.urdf.xacro  omni_base.xacro  omni_base_gazebo.xacro  omni_base_wheels.xacro  wheel.xacro
openx_description/: CMakeLists.txt  package.xml
openx_description/config/: ros2_controllers.yaml
openx_description/launch/: gazebo.launch.py  openx.launch.py  rviz_launch.launch.xml
openx_description/rviz/: openx.rviz
openx_description/urdf/: openx.urdf.xacro  openx_base.xacro  openx_base_ground.xacro  openx_control.xacro  openx_gazebo.urdf.xacro  openx_gazebo_control.xacro
path_planner/: CMakeLists.txt  package.xml
path_planner/include/path_planner/: path_planner.hpp  path_planner_action_client.hpp
path_planner/src/: path_planner.cpp  path_planner_action_client.cpp
prm_graph_publisher/: CMakeLists.txt  package.xml
prm_graph_publisher/include/prm_graph_publisher/: prm_graph_publisher.hpp
prm_graph_publisher/src/: prm_graph_publisher.cpp
prm_planner/: CMakeLists.txt  package.xml
prm_planner/include/prm_planner/: prm.hpp  prm_2d.hpp  prm_3d.hpp
prm_planner/src/: prm.cpp  prm_2d.cpp  prm_3d.cpp  prm_node.cpp
prop_nav/: CMakeLists.txt  package.xml
prop_nav/include/prop_nav/: prop_nav_guiduance.hpp
prop_nav/src/: prop_nav_guidance.cpp  prop_nav_node.cpp
py_inv_kin_solver/: package.xml  setup.cfg  setup.py
py_inv_kin_solver/py_inv_kin_solver/: manip_control.py  r1_manip_control.py  r2_manip_control.py  slsqp_optimizer.py  slsqp_optimizer_with_dist_constraint.py  test_inv_kin.py
teleop/: package.xml  setup.py
teleop/teleop/: teleop_omni.py
